--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="section">
-      <div class="row row-cols-3"></div>
+    <div class="container">
+      <div class="row row-cols-3" id="row"></div>
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
